--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,24 @@
 .field{
     border: 1px solid steelblue;
 }
+.field:hover .bat{
+    transform: rotate(-60deg);
+    transform-origin: top right;
+
+}
+.bat{
+    transition: transform 0.1s;
+}
+.ball{
+    height:50px;
+    width:50px;
+    background-color: red;
+    border-radius: 50%;
+    position: relative;
+    left: 515px;
+     transition: transform 1s ease-out 0.1s;
+
+}
+.field:hover .ball{
+    transform: translate( 1000px ,-500px);
+}
